--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"prefix" : "",
-	"token" : "",
-	"delay" : "delay in secs without any unit, for eg: 5",
-	"log_dms" : "enable or disable the logging after each DM"
+	"prefix" : "--",
+	"token" : "NTkyNjk0Mzg1Njg3MjY1Mjg0.XRDDqQ.livvI4eEl_UQwvSLA7K23zUjD6Y",
+	"delay" : "2",
+	"log_dms" : "on"
 }
