--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix" : "--",
-	"token" : "NTkyNjk0Mzg1Njg3MjY1Mjg0.XRDDqQ.livvI4eEl_UQwvSLA7K23zUjD6Y",
+	"token" : "NTgzMzg5NjM5NTU4MTY4NjAw.XO7p8A.mMogLfiYYgmamg-s9tV-uUqen2M",
 	"delay" : "2",
 	"log_dms" : "on"
 }
