--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix" : "--",
-	"token" : "NTgzMzg5NjM5NTU4MTY4NjAw.XO7p8A.mMogLfiYYgmamg-s9tV-uUqen2M",
+	"token" : "NTkzNzMyNDgyODE4Mzc1NzEw.XRSKdg.-agaI_QZDKzvUsrBtQst9nxVxGU",
 	"delay" : "2",
 	"log_dms" : "on"
 }
